--- a/mohira.html
+++ b/mohira.html
@@ -8,5 +8,11 @@
 <body>
     <p>salom, Zebo</p>
     <h5>vetka ikkini korsatish uchun</h5>
+    <button>Click to here</button>
+    <h1>hello</h1>
+    <p>salom, Zebo</p>
+    <h5>vetka ikkini korsatish uchun</h5>
+    <button>Click to here</button>
+    <h1>hello</h1>
 </body>
 </html>
